# dribble

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  AGENTS.md  ARCHITECTURE_IMPROVEMENTS.md  CLAUDE.md  CODEBASE_REFACTORING_PLAN.md  DEPLOYMENT.md  EPHEMERAL_QUERIES.md  Justfile  LICENSE  QUERY_STATE_PERSISTENCE.md  README.md  REFACTORING_SUMMARY.md  TREE_STATE_PERSISTENCE.md  auth.config.ts  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  proxy.ts
.claude/: launch.json
app/: globals.css  layout.tsx  page.tsx
client/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  eslint.config.js  fly.toml.template  index.html  package.json  server.js  vite.config.ts
components/: ChatTab.tsx  ConnectionModal.tsx  DragHandle.tsx  NotebookTab.tsx  PaginationBar.tsx  ResultsGrid.tsx  ResultsPanel.tsx  Sidebar.tsx  SqlEditor.tsx  TableTab.tsx  Tabs.tsx  UserMenu.tsx
docs/: CHAT_REFACTOR_SUMMARY.md  CNAME  CODE_SPLITTING_IMPLEMENTATION.md  EPHEMERAL_QUERIES.md  MIGRATION_COMPLETE.md  README.md  TREE_COMPONENTS_REFACTORING.md  authentication.md  chat-sidebar-refactoring.md  connection-lifecycle.md  docker-optimization.md  docusaurus.config.ts  package-lock.json  service-layer-extraction.md  sidebars.ts  store-refactoring.md  workspace-state.md
internal_docs/: CODEBASE_REFACTORING_PLAN_2.md  EDITOR.md  EPHEMERAL_QUERIES.md  ERROR_HANDLING_GUIDE.md  FLY_DEPLOYMENT_STREAMLINING.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS_SIMPLE.md  QUERY_RUN_SSE_REDESIGN.md  Query-Execution-Flow-Optimization.md  (+18 more)
server/: .coverage  CHAT_REFACTOR_SUMMARY.md  Dockerfile  Dockerfile.migrations  Dockerfile.prod  fly.toml.template  pyproject.toml
server/app/: alembic.ini  dependencies.py  main.py  models.py
server/app/alembic/: env.py
server/app/alembic/versions/: 0b320c8c8687_updated_chatmessage_with_message_type_.py  1e7f412ea9d0_made_name_optional_in_query_table.py  28ae5feaa852_adding_worker_table.py  37683b5f35ad_updated_query_table_added_query_version_.py  38558bdf3959_added_soft_delete.py  40cc097e0a52_added_workspace_user_sources_and_.py  50351ead9036_removed_worker.py  5303c7058643_removed_user_and_worksapce.py  5b25217cc04d_add_sql_query_column_to_chat_messages.py  5ffe9445b063_create_uuid_ossp_extension.py  b80db6a2c655_added_llms_table.py  c29789fd9477_added_is_ephemeral_and_preview_key_to_.py  c7e90936f97a_added_workepace_id_to_worker_table.py  cca82ef3a3c1_added_status_and_datetimes_to_query_run.py  ef44ce32bce2_added_context_to_chat_messages_updated_.py  f83683539d95_added_chat_messages_and_sessions.py
server/app/controllers/: chat.py  chat_types.py  llm.py  messages.py  query.py  query_service.py  sources.py  start.py
server/app/core/: _redis.py  db.py  db_utils.py  encryption.py  query_execution_service.py  reconcile.py  redis_subscriber.py  results_streaming_service.py  session_naming.py  spawn_worker.py  start.py  stop.py  task_service.py  task_types.py  worker_health_check.py
server/app/routes/: chat.py  llm.py  query.py  query_execution.py  query_execution_routes.py  query_routes.py  query_run.py  query_run_routes.py  query_version.py  query_version_routes.py  sources.py  sse.py  worker.py
server/app/schemas/: chat.py  llm.py  query.py  query_execute.py  query_run.py  query_version.py  sources.py  worker.py
server/tests/: conftest.py  docker-compose.yml  wait-for-server.sh
server/tests/tests/: test_database_seeding.py  test_llm_routes.py  test_models.py  test_query_routes.py  test_query_run_routes.py  test_query_version_routes.py  test_source_routes.py
worker_legacy/mysql/: Dockerfile  pyproject.toml
worker_legacy/mysql/app/: __init__.py  connection_manager.py  main.py  models.py  query_executor.py  schema_inspector.py  sql_builder.py
worker_legacy/postgres/: Dockerfile  pyproject.toml
worker_legacy/postgres/app/: connection_manager.py  helpers.py  main.py  query_executor.py  schema_inspector.py  sql_builder.py
(+309 files in other folders)
