[project]
name = "dribble-server"
version = "0.1.0"
description = "dribble server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "fastapi[standard]>=0.115.12",
    "psycopg>=3.2.9",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
