[project]
name = "dribble-server"
version = "0.1.0"
description = "dribble server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.0",
    "fastapi[standard]>=0.115.12",
    "pre-commit>=4.2.0",
    "psycopg>=3.2.9",
    "six>=1.17.0",
    "sqlalchemy>=2.0.41",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
# Enable flake8-bugbear (`B`) rules.
select = ["E", "F", "B"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".ruff_cache",
    "__pypackages__",
    "dist",
    "app/alembic/versions",
]
# Assume Python 3.13
target-version = "py313"
# Allow lines to be as long as 100 characters
line-length = 100
# Ignore specific rules
ignore = ["B008"]

[tool.ruff.format]
# Enable auto-formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
